--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Humane"; /*Can be any text*/
+  src:
+    local("Humane"),
+    url("/public/Humane.ttf") format("truetype");
+}
+
+.emoji-bg {
+  background:
+    url("/sphere.webp") no-repeat 50% 50%,
+    rgb(85, 70, 255);
+  background-size: cover;
+}
