feat: hide scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,13 @@
     rgb(85, 70, 255);
   background-size: cover;
 }
+
+html,
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
