--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "Humane";
   src:
     local("Humane"),
@@ -20,7 +20,7 @@
   src:
     local("Swansea"),
     url("/public/Swansea.ttf") format("truetype");
-}
+} */
 
 .emoji-bg {
   background:
