--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,7 @@ html,
 body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  -webkit-font-smoothing: antialiased;
 }
 
 ::-webkit-scrollbar {
